--- a/css/style.css
+++ b/css/style.css
@@ -276,7 +276,7 @@ nav ul li a {
 
 /* Introdução */
 #intro {
-  background: url(../img/background.png);
+  background: url(../img/background2.png);
   background-size: cover;
   background-position: center;
 }
